fix: 渲染管线修复、配置界面优化与物理参数调整
渲染修复:
- 第一人称游泳时跳过 MMD 渲染，避免模型穿插
- 渲染前清除 OpenGL 错误状态 (GlStateManager._getError)
- 完善渲染状态设置 (blend/depth/cull/shaderColor)，增加着色器空检查
- 舞台模式/VMD 相机模式使用满亮度光照 (LightTexture.pack(15,15))
- 仅在启用第一人称模型时才取消原版手臂渲染 (Fabric & NeoForge)
- 模型重载时重置 FirstPersonManager 状态

配置界面:
- 所有浮点滑块添加 setTextGetter 显示实际数值 (如 0.50 而非整数 50)
- 保存配置时仅在 GPU 蒙皮开关实际变化时才重载模型

物理参数:
- 最大线速度/角速度默认值 5.0 -> 20.0 (Java 配置 + Rust 引擎同步)

代码清理:
- 移除未使用变量/字段 (sliderH, vboPreallocated, modelInfo)
- 移除未使用 import (ConfigData, MmdSkinConfig, CustomPacketPayload)
- java.net.URL -> URI.create().toURL() 迁移 (避免弃用警告)
- 添加 @SuppressWarnings(deprecation)
- 更新原生库 DLL